--- a/index.Rmd
+++ b/index.Rmd
@@ -13,11 +13,12 @@ Hello! Welcome to Elise's website!
 
 
 
-Here you will find information [about](about.html) myself as well as a [dashboard](dashboard.html) if you are interested in learning more about NYC restaurant inspections!
-
+Here you will find information [about](about.html) as well as a [dashboard](dashboard.html) if you are interested in learning more about NYC restaurant inspections!
 
 
 I am currently a pediatric gastroenterology fellow at [Columbia](https://www.pediatrics.columbia.edu/education/fellowship-training/gastroenterology-hepatology-and-nutrition)
+
+
 
 You can find me on [linkedin](https://www.linkedin.com/in/elise-kang-77964427/)
 
