--- a/about.Rmd
+++ b/about.Rmd
@@ -17,22 +17,22 @@ Harvard University, BA
 
 **WORK EXPERIENCES**
 
-Department of Pediatric Gastroenterology (2021-Present) <br> 
-Columbia University
-Pediatric Gastroenterology Fellow
+Department of Pediatric Gastroenterology (Current) <br> 
+Columbia University <br> 
+Fellow
 
 
 
-Department of Pediatrics (2018-2021) <br> 
-Columbia University
-Pediatric Resident
+Department of Pediatrics <br> 
+Columbia University<br> 
+ Resident
 
 
 
-Healthcare Innovation Technology Lab (2013-2014) <br> 
+Healthcare Innovation Technology Lab  <br> 
 Research Coordinator
 
 
 
-Teach for America: Brooklyn Ascend Charter School (2012-2013) <br> 
+Teach for America: Brooklyn Ascend Charter School <br> 
 Corps Member
