--- a/about.Rmd
+++ b/about.Rmd
@@ -19,18 +19,17 @@ Harvard University, BA
 
 Department of Pediatric Gastroenterology (Current) <br> 
 Columbia University <br> 
-Fellow
-
+Fellow <br>  
 
 
 Department of Pediatrics <br> 
 Columbia University<br> 
- Resident
+ Resident <br>  
 
 
 
 Healthcare Innovation Technology Lab  <br> 
-Research Coordinator
+Research Coordinator <br>  
 
 
 
