--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ I also enjoy writing for [Buoy Health](https://www.buoyhealth.com/writers/elise-
 You can find me on [github](https://github.com/ek2794) as well.
 
 
-Last but not least, I have an 18 month old son named Thomas.
+Last but not least, I have an 18 month old son named Thomas. <br> 
 <img src="images/jiho.jpg" style="width:30%">
 
 
